Fix horizontal scrolling

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -22,4 +22,5 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
